--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,20 @@
-dist: trusty
-sudo: required
-language: bash
-before_install:
-- curl https://raw.githubusercontent.com/express42/otus-homeworks/2019-02/run.sh | bash
-notifications:
-  slack: devops-oxt5663:ouybc9AuXgfj15XjD1jMdTIv
+{
+  "language": "shell",
+  "os": [
+    "linux"
+  ],
+  "dist": "trusty",
+  "sudo": true,
+  "before_install": [
+    "curl https://raw.githubusercontent.com/express42/otus-homeworks/2019-02/run.sh | bash"
+  ],
+  "notifications": {
+    "slack": [
+      {
+        "rooms": [
+          "devops-oxt5663:ouybc9AuXgfj15XjD1jMdTIv"
+        ]
+      }
+    ]
+  }
+}
