--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,12 @@
 [defaults]
-inventory = ./inventory
+inventory = ./hosts/inventory.gcp.yml
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
 retry_files_enabled = False
-#role_path="../roles"
+role_path=./roles
+
+[diff]
+# Включим обязательный вывод diff при наличии изменений и вывод 5 строк контекста
+always = True
+context = 5
