--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ test_integration_job:
     - echo 'Testing 2'
 
 deploy_dev_job:
-  stage: pre
+  stage: stage
   script:
     - echo 'Deploy'
   environment:
