--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,9 @@ stages:
   - build
   - test
   - deploy
+  - stage
+  - production
+  - review
 
 variables:
   DATABASE_URL: 'mongodb://mongo/user_posts'
@@ -30,7 +33,7 @@ test_integration_job:
     - echo 'Testing 2'
 
 deploy_dev_job:
-  stage: pre
+  stage: review
   script:
     - echo 'Deploy'
   environment:
